# shipapi

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: ci.yml  deploy.yml  seed.yml
alembic/: env.py
alembic/versions/: 1a2b3c4d5e6f_initial_schema.py
docs/plans/: 2026-02-19-error-handler-middleware.md  2026-02-19-fastapi-skeleton.md  2026-02-19-pre-deploy-config-ci-workflow.md  2026-02-19-warehouse-stock-schemas.md  2026-02-21-landing-shell-nav-hero-footer-design.md
scripts/: smoke-test-auth.sh  smoke-test-business.sh  smoke-test-infra.sh  validate-final.sh
seed/: __init__.py  __main__.py  seed.py
src/: config.py  database.py  dependencies.py  main.py
src/api/: __init__.py  audit.py  auth.py  categories.py  health.py  products.py  router.py  showcase.py  stock.py  warehouses.py
src/app/: page.tsx
src/middleware/: __init__.py  access_log.py  error_handler.py  rate_limit.py  request_id.py
src/models/: __init__.py  audit_log.py  base.py  category.py  product.py  stock_level.py  stock_transfer.py  user.py  warehouse.py
src/schemas/: __init__.py  audit.py  (+8 more)
tests/: conftest.py  test_access_log.py  test_audit.py  test_auth.py  test_auth_api.py  test_categories.py  test_config.py  test_database.py  test_dependencies.py  test_error_handler.py  test_errors.py  test_health.py  test_main.py  test_products.py  test_rate_limit.py  test_request_id.py  test_schemas_stock.py  test_schemas_warehouse.py  test_showcase.py  test_stock.py  test_warehouses.py
(+18 files in other folders)
